# capnpc-macros

./: .gitignore  Cargo.toml  README.markdown
examples/addressbook/: Cargo.toml  addressbook.rs
src/: lib.rs
