[package]

name = "addressbook"
version = "0.0.0"
authors = [
  "David Renshaw <dwrenshaw@sandstorm.io>",
  "Ben Foppa <benjamin.foppa@gmail.com>",
]
build = "build.rs"

[[bin]]

name = "addressbook"
path = "addressbook.rs"

[build-dependencies.capnpc]
git = "https://github.com/dwrensha/capnpc-rust"

[dependencies]
capnp = "*"

[dependencies.capnpc-macros]
path = "../../"
